[-1] 测试图片显示问题

--- a/1-设计模式/1.1-设计基础/1.1.1-UML类图.md
+++ b/1-设计模式/1.1-设计基础/1.1.1-UML类图.md
@@ -16,11 +16,11 @@
 
 &emsp;&emsp;[聚合关系](#聚合关系)
 
-&emsp;&emsp;[聚合关系](#组合关系)
+&emsp;&emsp;[组合关系](#组合关系)
 
-&emsp;&emsp;[聚合关系](#依赖关系)
+&emsp;&emsp;[依赖关系](#依赖关系)
 
-&emsp;&emsp;[聚合关系](#关联关系、聚合关系、组合关系之间的区别)
+&emsp;&emsp;[关联关系和聚合关系及组合关系之间的区别](#关联关系和聚合关系及组合关系之间的区别)
 
 ---
 
@@ -374,14 +374,14 @@ public:
 
 对应的UML类图为：
 
-![依赖关系示例.png](res/1-title/依赖关系示例.png)
+![依赖关系示例.png](../../res/1-title/依赖关系示例.png)
 
 依赖关系通常通过三种方式来实现：
 - 将一个类的对象作为另一个类中方法的参数。
 - 在一个类的方法中将另一个类的对象作为其对象的局部变量。
 - 在一个类的方法中调用另一个类的静态方法。
 
-### 关联关系、聚合关系、组合关系之间的区别
+### 关联关系和聚合关系及组合关系之间的区别
 
 1.关联和聚合的区别主要在于语义上：关联的两个对象之间一般是平等的，聚合则一般是不平等的。
 
