[1] 解决了图片不能正常显示的问题

--- a/1-设计模式/1.1-设计基础/1.1.1-UML类图.md
+++ b/1-设计模式/1.1-设计基础/1.1.1-UML类图.md
@@ -75,7 +75,7 @@ int Hunter::m_times = 3;
 
 这个类对应的类图应该是这样的：
 
-![UML类图示例.png](res/1-title/UML类图示例.png)
+![UML类图示例.png](../../res/1-title/UML类图示例.png)
 
 在UML类图中：
 
@@ -156,7 +156,7 @@ public:
 ```
 使用UML表示上述关系如下：
 
-![泛化关系示例.png](res/1-title/泛化关系示例.png)
+![泛化关系示例.png](../../res/1-title/泛化关系示例.png)
 
 ### 关联关系
 
@@ -183,7 +183,7 @@ private:
 ```
 用UML表示如下：
 
-![单向关联关系示例.png](res/1-title/单向关联关系示例.png)
+![单向关联关系示例.png](../../res/1-title/单向关联关系示例.png)
 
 在这个例子中 Parent 类 作为了Child 类的成员变量，因此箭头端应该指向Parent 类，另一端连接 Child 类。
 
@@ -211,9 +211,9 @@ private:
 
 用UML表示如下：
 
-![双向关联关系示例1.png](res/1-title/双向关联关系示例1.png)
+![双向关联关系示例1.png](../../res/1-title/双向关联关系示例1.png)
 
-![双向关联关系示例2.png](res/1-title/双向关联关系示例2.png)
+![双向关联关系示例2.png](../../res/1-title/双向关联关系示例2.png)
 
 #### 自关联关系
 
@@ -234,7 +234,7 @@ private:
 
 用UML表示如下：
 
-![自关联关系示例.png](res/1-title/自关联关系示例.png)
+![自关联关系示例.png](../../res/1-title/自关联关系示例.png)
 
 ### 聚合关系
 
@@ -283,7 +283,7 @@ private:
 
 对应的UML类图为：
 
-![聚合关系示例.png](res/1-title/聚合关系示例.png)
+![聚合关系示例.png](../../res/1-title/聚合关系示例.png)
 
 代码实现聚合关系，成员对象通常以构造方法、Setter方法的方式注入到整体对象之中，因为成员对象可以脱离整体对象独立存在。
 
@@ -338,7 +338,7 @@ private:
 
 对应的UML类图为：
 
-![组合关系示例.png](res/1-title/组合关系示例.png)
+![组合关系示例.png](../../res/1-title/组合关系示例.png)
 
 注意：代码实现组合关系，通常在整体类的构造方法中直接实例化成员类，因为组合关系的整体和部分是共生关系，整体的实例对象被析构的时候它的子对象也会一并被析构。如果通过外部注入，即使整体不存在了，部分还是存在的，这样的话就变成聚合关系了。
 
