[2]更新了UML类图的语法内容

--- a/1-设计模式/1.1-设计基础/1.1.1-UML类图.md
+++ b/1-设计模式/1.1-设计基础/1.1.1-UML类图.md
@@ -1,5 +1,7 @@
 # UML类图
 
+[语法](#语法)
+
 [类的UML画法](#类的UML画法)
 
 [类与类之间的关系](#类与类之间的关系)
@@ -23,6 +25,15 @@
 &emsp;&emsp;[关联关系和聚合关系及组合关系之间的区别](#关联关系和聚合关系及组合关系之间的区别)
 
 ---
+
+## 语法
+
+|类名|
+|:---|
+|[可见性]变量名[:类型][=初始值][{属性字符串}]|
+|[可见性]函数名[(参数表)][:返回类型][{属性字符串}]|
+
+`注意:[]中的内容可有可无`
 
 ## 类的UML画法
 
@@ -86,13 +97,6 @@ int Hunter::m_times = 3;
 
 对于静态成员变量或者静态成员函数函数：
 - 用下划线表示，如上图 <span style="text-decoration:underline">+m_times:int</span>
-
-类图大体表示形式为：
-
-|类名|
-|:---|
-|访问修饰符(-、#、+) 变量名 : 变量类型 = 值|
-|访问修饰符(-、#、+) 函数名 : 返回类型|
 
 注意：在使用UML画类图的时候，如果我们定义的类是一个抽象类，类名需要使用斜体显示。虚函数的表示方跟随类名，也就是使用斜体，如果是纯虚函数则需要在最后给函数指定=0。
 
