[1] 修正了部分错别字及图片中UML类图中的部分错误

--- a/1-设计模式/1.2-创建型模式/1.2.2-简单工厂模式.md
+++ b/1-设计模式/1.2-创建型模式/1.2.2-简单工厂模式.md
@@ -13,7 +13,7 @@
 
 ## 代码实现
 
-假设我们需要使用武器剑、斧头、长枪，可以定义一下代码：
+假设我们需要使用的武器有剑、斧头、长枪，则可以定义以下代码：
 
 ```C++
 // 剑
@@ -92,9 +92,9 @@ public:
 };
 ```
 
-关于武器的类型，代码中中用到了强类型枚举，实现了不同对象类型的兼容，并且将枚举元素设置为了`char`类型，节省了内存。
+关于武器的类型，代码中用到了强类型枚举，实现了不同对象类型的兼容，并且将枚举元素设置为了`char`类型，节省了内存。
 
-得到函数`createSmile(Type type)`的返回值之后，还需要将其转换成实际的类型,后续处理较为复杂。
+上述代码在得到函数`createSmile(Type type)`的返回值之后，还需要将其转换成实际的类型,后续处理较为复杂。
 
 为解决该问题，我们可以使用多态，当然需要满足下面三个条件：
 - 类和类之间有继承关系。
