[2] 更新 封闭-开放原则

--- a/1-设计模式/1.1-设计基础/1.1.2-SOLID原则.md
+++ b/1-设计模式/1.1-设计基础/1.1.2-SOLID原则.md
@@ -1,6 +1,6 @@
 # SOLID原则
 [单一职责原则](#单一职责原则)  
-[开放封闭原则](#开放封闭原则)  
+[开放-封闭原则](#开放-封闭原则)  
 [里氏替换原则](#里氏替换原则)  
 [接口隔离原则](#接口隔离原则)  
 [依赖倒置原则](#依赖倒置原则)  
@@ -94,7 +94,7 @@ public:
 ```
 像这样就能较好的避免之前出现的问题,文件读取方式修改只需改FileReader，数据格式变化只需改DataParser。
 
-## 开放封闭原则
+## 开放-封闭原则
 核心思想：软件实体（类、模块、函数等）应该对扩展开放，但对修改封闭。
 - 扩展开放，即能通过新增代码来添加新功能。
 - 修改封闭，已有代码不需要被修改（避免破坏现有功能）。
