[1] 修正了部分代码错误

--- a/1-设计模式/1.2-创建型模式/1.2.2-简单工厂模式.md
+++ b/1-设计模式/1.2-创建型模式/1.2.2-简单工厂模式.md
@@ -110,8 +110,8 @@ public:
 class AbstractWeapon
 {
 public:
-    virtual void transform() = 0;
-    virtual void ability() = 0;
+    virtual void attack() = 0;
+    virtual void defense() = 0;
     virtual ~AbstractWeapon() = default; // 虚析构确保正确释放资源
 };
 
