[1] 修正了部分排版问题

--- a/1-设计模式/1.2-创建型模式/1.2.3-工厂模式.md
+++ b/1-设计模式/1.2-创建型模式/1.2.3-工厂模式.md
@@ -2,9 +2,7 @@
 
 [简单工厂模式的弊端](#简单工厂模式的弊端)
 
-[工厂模式概要](#工厂模式概要)
-
-[工厂模式的代码实现](#工厂模式的代码实现)
+[工厂模式的实现](#工厂模式的实现)
 
 ---
 
@@ -43,7 +41,7 @@ public:
 ```
 在该代码中显然违反了开放-封闭原则，每当想要生成更多种类的武器时，就需要在`switch`中增加更多的`case`，违背了封闭原则。为解决该问题，引申出工厂模式。
 
-## 工厂模式概要
+## 工厂模式的实现
 
 面对简单工厂模式只有一个类导致的弊端，我们不妨改进一下:
 - 使用一个基类，包含一个虚工厂函数，用于实现多态。
