[2] 更新了 关联关系对比聚合组合及依赖关系之间的区别，对比之前更加一目了然

--- a/1-设计模式/1.1-设计基础/1.1.1-UML类图.md
+++ b/1-设计模式/1.1-设计基础/1.1.1-UML类图.md
@@ -22,7 +22,7 @@
 
 &emsp;&emsp;[依赖关系](#依赖关系)
 
-&emsp;&emsp;[关联关系和聚合关系及组合关系之间的区别](#关联关系和聚合关系及组合关系之间的区别)
+&emsp;&emsp;[关联关系对比聚合组合及依赖关系之间的区别](#关联关系对比聚合组合及依赖关系之间的区别)
 
 ---
 
@@ -385,11 +385,43 @@ public:
 - 在一个类的方法中将另一个类的对象作为其对象的局部变量。
 - 在一个类的方法中调用另一个类的静态方法。
 
-### 关联关系和聚合关系及组合关系之间的区别
+### 关联关系对比聚合组合及依赖关系之间的区别
 
-1.关联和聚合的区别主要在于语义上：关联的两个对象之间一般是平等的，聚合则一般是不平等的。
+**关联**
+- 定义：表示两个类之间的基本连接关系，一个类知道另一个类的存在（可能有双向或单向）。
+- 特点:
+    - 没有整体与部分的语义。
+    - 类之间是平等的，可以是简单的引用关系。
+    - 生命周期不绑定，双方可以独立存在。
 
-2.聚合和组合的区别:
+**聚合**
+- 定义：一种特殊的关联关系，表示 整体与部分 的关系，但部分可以独立存在。
+- 特点：部分的生命周期不依赖于整体（例如：汽车和轮胎，轮胎可以脱离汽车存在）。
 
-- 组合的两个对象之间生命周期有很大的关联，被组合的对象在组合对象创建的同时或者创建之后创建在组合对象销毁之前销毁，聚合则无需考虑这些事情。 
-- 一般来说被组合对象不能脱离组合对象独立存在，而且也只能属于一个组合对象，聚合则不一样，被聚合的对象可以属于多个聚合对象。
+<br />
+
+- 与关联关系的关键区别：
+    - 语义：聚合是整体与部分的关系，而关联是平等的关系。
+    - 生命周期：聚合的部分可以独立存在，关联的双方可能没有直接的生命周期依赖。
+
+**组合**
+- 定义：一种强类型的聚合，表示整体与部分的关系，但部分的生命周期完全依赖于整体。
+- 特点：部分不能脱离整体存在（例如：公司和部门，部门随公司销毁而销毁）。 
+
+<br />
+
+- 与关联关系的关键区别：
+    - 生命周期：组合的部分必须与整体共存亡，而关联的双方是独立的。
+    - 代码表现：组合通常在整体的构造函数中直接创建部分对象。
+
+**依赖**
+- 定义：一个类临时使用另一个类，但没有长期持有关系。
+- 特点：
+    - 通常通过方法参数、局部变量或返回值体现。
+    - 关系短暂，不持有对方的引用。
+
+<br />
+
+- 与关联关系的关键区别：
+    - 强度：依赖是临时、弱的关系，而关联是长期、稳定的关系。
+    - 代码表现：依赖不持有对方的成员变量，仅在方法中使用。
