[2] 更新 目录 [1] 修正了图片显示问题

--- a/1-设计模式/1.3-结构型模式/1.3.7-代理模式.md
+++ b/1-设计模式/1.3-结构型模式/1.3.7-代理模式.md
@@ -1,5 +1,9 @@
 ﻿# 代理模式
 
+[概要](#概要)
+
+[类图及代码](#类图及代码)
+
 ---
 
 ## 概要
@@ -17,7 +21,7 @@
 
 类图如下：
 
-![代理模式类图示例.png](#../../res/3-title/代理模式类图示例.png)
+![代理模式类图示例.png](../../res/3-title/代理模式类图示例.png)
 
 该类图中代理类和真实业务类是聚合关系，但场景不同关系也不同，在别的样例场景中还可能是关联。
 
