--- a/1-设计模式/1.4-行为模式/1.4.3-迭代器模式.md
+++ b/1-设计模式/1.4-行为模式/1.4.3-迭代器模式.md
@@ -1,5 +1,19 @@
 # 迭代器模式
 
+[概述](#概述)
+
+&emsp;&emsp;[概念](#概念)
+
+&emsp;&emsp;[核心思想](#核心思想)
+
+&emsp;&emsp;[基本结构](#基本结构)
+
+[类图及代码](#类图及代码)
+
+&emsp;&emsp;[类图](#类图)
+
+&emsp;&emsp;[代码](#代码)
+
 ---
 
 ## 概述
