--- a/1-设计模式/1.4-行为模式/1.4.11-解释器模式.md
+++ b/1-设计模式/1.4-行为模式/1.4.11-解释器模式.md
@@ -33,7 +33,7 @@
 - ​抽象表达式：这是一个接口或抽象类，定义了一个抽象的解释方法，用来解释上下文中的信息。
 - 终结符表达式：
     - 这是抽象表达式的一个实现，通常代表文法中的终结符。例如，在数学表达式中，数字就是终结符表达式。
-    - 它的解释方法实现了具体的解释逻辑。​
+    - 它的解释方法实现了具体的解释逻辑。
 - 非终结符表达式：
     - 这也是抽象表达式的实现，但它通常表示文法中的非终结符，如加法、乘法等操作符。
     - 非终结符表达式的解释方法通常会调用其子表达式的解释方法来解析其内容。​
