--- a/2-Redis/2.2-Redis进阶.md
+++ b/2-Redis/2.2-Redis进阶.md
@@ -24,6 +24,8 @@
 
 &emsp;&emsp;[主要命令](#主要命令)
 
+[HyperLogLog](#HyperLogLog)
+
 ---
 
 # 发布订阅模式
@@ -365,4 +367,33 @@ Geospatial（地理空间） 是一种特殊的数据类型，用于存储和查
 	- 样例：
 		```redis
 		GEORADIUSBYMEMBER city beijing 1500 km WITHDIST
+		```
+
+# HyperLogLog
+
+Redis 的 HyperLogLog（HLL）是一种用于估算集合基数（distinct count）的概率性数据结构。
+
+## 特点
+
+用极少的内存（最多约 12 KB）就能以约 0.81% 的标准误差估算出集合中不同元素的数量，非常适合在大规模去重统计场景中使用
+- 每个HLL键占 12KB（16384个桶 × 6 bit/桶）
+- 标准误差 0.81%，实际误差可能更低。
+
+## 主要命令
+
+- PFADD: 向 HLL 添加元素
+	- 语法：
+		```redis
+		PFADD key element [element ...]
+		```
+
+- PFCOUNT: 计算HLL的基数估计值
+	- 语法：
+		```redis
+		PFCOUNT key [key ...]
+		```
+- PFMERGE: 合并多个HLL到目标键，用于跨时间段统计
+	- 语法：
+		```redis
+		PFMERGE destkey sourcekey [sourcekey ...]
 		```
