[0] 新增了位图Bitmap

--- a/2-Redis/2.2-Redis进阶.md
+++ b/2-Redis/2.2-Redis进阶.md
@@ -26,6 +26,16 @@
 
 [HyperLogLog](#HyperLogLog)
 
+&emsp;&emsp;[特点](#特点)
+
+&emsp;&emsp;[主要命令](#主要命令)
+
+[位图Bitmap](#位图Bitmap)
+
+&emsp;&emsp;[核心概念](#核心概念)
+
+&emsp;&emsp;[常用命令](#常用命令)
+
 ---
 
 # 发布订阅模式
@@ -282,7 +292,7 @@ Geospatial（地理空间） 是一种特殊的数据类型，用于存储和查
 		- latitude：成员的纬度。
 		- member：地理位置的成员名称（可以是任何字符串）。
 		
-	- 样例：
+	- 示例：
 		```redis
 		geoadd city 116.405285 39.904989 beijing
 		```
@@ -298,7 +308,7 @@ Geospatial（地理空间） 是一种特殊的数据类型，用于存储和查
 		```redis
 		GEOPOS key member [member ...]​
 		```
-	- 样例
+	- 示例
 		```redis
 		geopos city beijing shanghai
 		```
@@ -314,7 +324,7 @@ Geospatial（地理空间） 是一种特殊的数据类型，用于存储和查
 			- mi: 英里
 			- ft: 英尺
 
-	- 样例：
+	- 示例：
 		```redis
 		geodist city beijing shanghai km
 		```
@@ -340,7 +350,7 @@ Geospatial（地理空间） 是一种特殊的数据类型，用于存储和查
 		- WITHDIST（可选）：返回每个成员与指定中心点的距离。
 		- WITHHASH（可选）：返回每个成员的 Geohash 值。
 
-	- 样例
+	- 示例
 		```redis
 		geosearch city frommember beijing byradius 1500 km
 		```
@@ -353,7 +363,7 @@ Geospatial（地理空间） 是一种特殊的数据类型，用于存储和查
 		- STORE key：​将查询结果的成员存储到指定的键中，作为有序集合。在这种情况下，成员的分数是其原始的 geohash 值，保留了地理位置信息。
 		- STOREDIST key：​将查询结果的成员存储到指定的键中，作为有序集合，但成员的分数被设置为它们与查询中心点之间的距离。
 
-	- 样例：
+	- 示例：
 		```redis
 		GEORADIUS city 15 37 9270 km WITHDIST
 		```
@@ -364,7 +374,7 @@ Geospatial（地理空间） 是一种特殊的数据类型，用于存储和查
 		GEORADIUSBYMEMBER key member radius unit [WITHCOORD] [WITHDIST] [WITHHASH] [COUNT count] [ASC|DESC] [STORE key] [STOREDIST key]
 		```
 
-	- 样例：
+	- 示例：
 		```redis
 		GEORADIUSBYMEMBER city beijing 1500 km WITHDIST
 		```
@@ -397,3 +407,55 @@ Redis 的 HyperLogLog（HLL）是一种用于估算集合基数（distinct count
 		```redis
 		PFMERGE destkey sourcekey [sourcekey ...]
 		```
+
+# 位图Bitmap
+
+位图（Bitmap） 是一种基于二进制位（bit）操作的高效数据结构，底层通过字符串（String）类型实现。每个位（bit）只能存储 0 或 1，可以用于表示二值状态
+
+## 核心概念
+
+- 底层实现：Bitmap 本质是一个字节数组（char[]），每个字节包含 8 个位（bit）。
+- 位偏移：位的索引从 0 开始，例如偏移量为 0 表示第一个字节的第 1 位，偏移量 8 表示第二个字节的第 1 位。
+- 自动扩展：当设置的偏移量超过当前长度时，Redis 会自动填充 0 扩展内存（以字节为单位）。
+
+## 常用命令
+
+- SETBIT: 设置位的值
+	- 语法：
+		```redis
+		SETBIT key offset value  # 将 key 对应位图的第 offset 位设为 value（0/1）
+		```
+
+	- 示例：
+		```redis
+		setbit bit 0 1
+		```
+
+- 使用SET同时设置多个位
+	```redis
+	set bit "\xF0" # 可以使用16进制来表示一个数
+	```
+
+- GETBIT: 获取位的值
+	- 语法：
+		```redis
+		GETBIT key offset  # 返回位图中第 offset 位的值（0/1）
+		```
+
+	- 示例：
+		```redis
+		getbit bit 0
+		```
+
+- BITCOUNT: 统计位图中值为 1 的比特位数量
+	- 语法：
+		```redis
+		BITCOUNT key [start end]
+		```
+
+- BITPOS: 查找位图中从指定偏移量开始，值为 1 或 0 的第一个比特位的位置 
+	- 语法：
+		```redis					
+		BITPOS key start [end] [value]
+		```
+
