[1] 修复了目录跳转问题

--- a/2-Redis/2.2-Redis进阶.md
+++ b/2-Redis/2.2-Redis进阶.md
@@ -28,13 +28,13 @@
 
 &emsp;&emsp;[特点](#特点)
 
-&emsp;&emsp;[主要命令](#主要命令)
+&emsp;&emsp;[主要命令](#HyperLogLog主要命令)
 
 [位图Bitmap](#位图Bitmap)
 
 &emsp;&emsp;[核心概念](#核心概念)
 
-&emsp;&emsp;[常用命令](#常用命令)
+&emsp;&emsp;[常用命令](#Bitmap常用命令)
 
 ---
 
@@ -389,7 +389,7 @@ Redis 的 HyperLogLog（HLL）是一种用于估算集合基数（distinct count
 - 每个HLL键占 12KB（16384个桶 × 6 bit/桶）
 - 标准误差 0.81%，实际误差可能更低。
 
-## 主要命令
+## HyperLogLog主要命令
 
 - PFADD: 向 HLL 添加元素
 	- 语法：
@@ -418,7 +418,7 @@ Redis 的 HyperLogLog（HLL）是一种用于估算集合基数（distinct count
 - 位偏移：位的索引从 0 开始，例如偏移量为 0 表示第一个字节的第 1 位，偏移量 8 表示第二个字节的第 1 位。
 - 自动扩展：当设置的偏移量超过当前长度时，Redis 会自动填充 0 扩展内存（以字节为单位）。
 
-## 常用命令
+## Bitmap常用命令
 
 - SETBIT: 设置位的值
 	- 语法：
