--- a/2-Redis/2.2-Redis进阶.md
+++ b/2-Redis/2.2-Redis进阶.md
@@ -36,6 +36,20 @@
 
 &emsp;&emsp;[常用命令](#Bitmap常用命令)
 
+[位域Bitfield](#位域Bitfield)
+
+&emsp;&emsp;[基本概念](#基本概念)
+
+&emsp;&emsp;[命令语法](#命令语法)
+
+&emsp;&emsp;[关键特性](#关键特性)
+
+&emsp;&emsp;&emsp;&emsp;[原子性操作](#原子性操作)
+
+&emsp;&emsp;&emsp;&emsp;[溢出控制](#溢出控制)
+
+&emsp;&emsp;&emsp;&emsp;[自动扩展](#自动扩展)
+
 ---
 
 # 发布订阅模式
@@ -459,3 +473,40 @@ Redis 的 HyperLogLog（HLL）是一种用于估算集合基数（distinct count
 		BITPOS key start [end] [value]
 		```
 
+# 位域Bitfield
+
+BITFIELD命令是一个强大的工具，用于高效处理位级数据。它允许对字符串中的特定位段进行原子性操作，如读取、设置和自增，支持多种数据类型和溢出控制
+
+## 基本概念
+
+- 位域：将一个字符串视为一个连续的位数组，可将其划分为多个字段（位段），每个字段存储特定长度的整数（如1位、4位、8位等）。
+- 数据类型：支持有符号（i前缀，如i8）和无符号（u前缀，如u16）整数，长度范围为1到64位（如u4、i32）。
+- 偏移量（Offset）：以位为单位，指定操作的起始位置。例如，偏移量0表示从第一位开始，8表示从第9位开始。
+
+## 命令语法
+
+```redis
+BITFIELD key [GET type offset] [SET type offset value] [INCRBY type offset increment] [OVERFLOW WRAP|SAT|FAIL] ...
+```
+
+- 子命令
+	- GET：读取指定位段的值。
+	- SET：设置指定位段的值。
+	- INCRBY：对指定位段进行增减操作（支持负数）。
+	- OVERFLOW：设置溢出处理策略（默认WRAP）。
+
+## 关键特性
+
+### 原子性操作
+
+- 单个BITFIELD命令中的所有操作会原子性执行，确保中间状态不会被其他命令干扰。
+
+### 溢出控制
+
+- WRAP（默认）：环绕处理。如u8的255加1变为0，i8的127加1变为-128。
+- SAT：饱和处理。超过最大值保持最大，低于最小值保持最小（如u8的255加1仍为255）。
+- FAIL：溢出时放弃操作，返回nil。
+
+### 自动扩展
+
+- 若操作的偏移量超出字符串长度，Redis会自动扩展字符串并用0填充空缺位。
