[2] 更新了容器管理命令的布局

--- a/3-Docker/3.1-Docker命令一览.md
+++ b/3-Docker/3.1-Docker命令一览.md
@@ -26,11 +26,17 @@
 
 - 运行容器（后台模式）
 
-	```docker run -d <image_name>```
+	```
+	docker run -d <image_name>
+	docker run --name <container_name> -p <host_port>:<container_port> <image_name>  // 指定容器名称和端口映射
+	```
 
-- 指定容器名称和端口映射
+- 查看运行中的容器
 
-	```docker run --name <container_name> -p <host_port>:<container_port> <image_name>```
+	```
+	docker ps
+	docker ps -a // 查看所有容器（包括已停止的）
+	```
 
 - 启动已停止的容器
 
@@ -48,13 +54,9 @@
 
 	```docker restart <container_name/ID>```
 
-- 查看运行中的容器
+- 查看容器状态
 
-	```docker ps```
-
-- 查看所有容器（包括已停止的）
-
-	```docker ps -a```
+	```docker stats```
 
 - 进入运行中的容器终端
 
@@ -66,10 +68,7 @@
 
 - 删除已停止的容器
 
-	```docker rm <container_name/ID>```
-
-- 强制删除运行中的容器
-	```docker rm -f <container_name/ID>```## 镜像管理- 拉取镜像
+	```	docker rm <container_name/ID>	docker rm -f <container_name/ID> // 强制删除运行中的容器	```## 镜像管理- 拉取镜像
 	```docker pull <image_name>:<tag>```
 
 - 构建镜像（需在Dockerfile目录执行）
