[2] 更新了镜像操作命令

--- a/3-Docker/3.1-Docker命令一览.md
+++ b/3-Docker/3.1-Docker命令一览.md
@@ -68,12 +68,9 @@
 
 - 删除已停止的容器
 
-	```	docker rm <container_name/ID>	docker rm -f <container_name/ID> // 强制删除运行中的容器	```## 镜像管理- 拉取镜像
+	```	docker rm <container_name/ID>	docker rm -f <container_name/ID> // 强制删除运行中的容器	```## 镜像管理- 检索镜像	```docker search```- 拉取镜像
+
 	```docker pull <image_name>:<tag>```
-
-- 构建镜像（需在Dockerfile目录执行）
-
-	```docker build -t <image_name>:<tag> .```
 
 - 查看本地镜像
 
@@ -83,13 +80,37 @@
 
 	```docker rmi <image_name/ID>```
 
+- 认证 (必须登录后才能推送镜像到仓库)
+
+	```docker login```
+
+- 提交修改
+
+	```docker commit```
+
+- 命名，标记镜像
+
+	```docker tag```
+
 - 推送镜像到仓库
 
 	```docker push <image_name>:<tag>```
 
+- 保存，镜像导出为离线文件
+
+	```docker save```
+
+- 加载，从离线文件加载镜像
+
+	```docker load```
+
 - 清理未使用的镜像
 
 	```docker image prune```
+
+- 构建镜像（需在Dockerfile目录执行）
+
+	```docker build -t <image_name>:<tag> .```
 
 ## 网络管理
 
