[2] 更新了部分命令

--- a/3-Docker/3.1-Docker命令一览.md
+++ b/3-Docker/3.1-Docker命令一览.md
@@ -31,6 +31,13 @@
 	docker run --name <container_name> -p <host_port>:<container_port> <image_name>  // 指定容器名称和端口映射
 	```
 
+- 运行容器（目录挂载/卷映射）
+
+	```
+	docker run -v <宿主机绝对路径>:<容器内路径>[:权限] <镜像名>
+	docker run -v <卷名>:<容器内路径> nginx
+	```
+
 - 查看运行中的容器
 
 	```
@@ -68,7 +75,18 @@
 
 - 删除已停止的容器
 
-	```	docker rm <container_name/ID>	docker rm -f <container_name/ID> // 强制删除运行中的容器	```## 镜像管理- 检索镜像	```docker search```- 拉取镜像
+	```
+	docker rm <container_name/ID>
+	docker rm -f <container_name/ID> // 强制删除运行中的容器
+	```
+
+## 镜像管理
+
+- 检索镜像
+
+	```docker search```
+
+- 拉取镜像
 
 	```docker pull <image_name>:<tag>```
 
@@ -135,6 +153,18 @@
 - 查看数据卷
 
 	```docker volume ls```
+
+- 查看卷详细信息
+
+	```docker volume inspect <卷名>```
+
+- 查看容器挂载的卷
+	
+	```docker inspect <容器ID或名称> | grep "Mounts"```
+
+- 删除卷
+
+	```docker volume rm <卷名>```
 
 - 删除未使用的数据卷
 
