[2] 更新了 Redis安装

--- a/2-Redis/2.1-Redis基础.md
+++ b/2-Redis/2.1-Redis基础.md
@@ -6,6 +6,8 @@
 
 &emsp;&emsp;[应用场景](#应用场景)
 
+&emsp;&emsp;[Redis安装](#Redis安装)
+
 [基本命令](#基本命令)
 
 [数据结构](#数据结构)
@@ -41,6 +43,10 @@ Redis是一种使用ANSI C语言编写、遵守BSD协议、支持网络、基于
 - 实时分析：​Redis 的有序集合和快速操作使其适合用于实时数据分析，如排行榜和计数器。
 - pub/sub消息订阅。
 - ……
+
+## Redis安装
+
+执行 ```yum install redis``` 即可。
 
 # 基本命令
 
