[2] 更新了 Docker Compose 命令

--- a/3-Docker/3.1-Docker命令一览.md
+++ b/3-Docker/3.1-Docker命令一览.md
@@ -176,6 +176,8 @@
 
 	```docker-compose up -d```
 
+	```docker compose -f compose.yaml up -d # -f: 指定文件```
+
 - 停止并删除服务
 
 	```docker-compose down```
