[1] 图片显示修正

--- a/3-Docker/3.4-DockerCompose.md
+++ b/3-Docker/3.4-DockerCompose.md
@@ -67,4 +67,4 @@ networks:
 
 这样，就可以看到 wordpress 和 mysql:8.0 俩个一起启动了。
 
-![DocekrComposeUP启动展示,png](../res/Docekr/DocekrComposeUP启动展示.png)
+![DocekrComposeUP启动展示.png](../res/Docekr/DocekrComposeUP启动展示.png)
