--- a/3-Docker/3.5-Dockerfile.md
+++ b/3-Docker/3.5-Dockerfile.md
@@ -2,6 +2,10 @@
 
 [制作镜像](#制作镜像)
 
+&emsp;&emsp;[Dockerfile场景指令](#Dockerfile场景指令)
+
+&emsp;&emsp;[DockerFile文件配置示例](#DockerFile文件配置示例)
+
 [镜像分层机制](#镜像分层机制)
 
 ---
