[4] 重命名 RocketMQ集群部署与监控 --> RocketMQ集群部署

--- a/5-RocketMQ/5.2-RocketMQ集群部署.md
+++ b/5-RocketMQ/5.2-RocketMQ集群部署.md
@@ -1,4 +1,4 @@
-# RocketMQ集群部署与监控
+# RocketMQ集群部署
 
 [系统配置](#系统配置)
 
@@ -239,4 +239,3 @@
 	export NAMESRV_ADDR="CentOS9_1:9876;CentOS9_2:9876;CentOS9_3:9876"
 	./tools.sh org.apache.rocketmq.example.quickstart.Consumer
 	```
-
