[2] 更新 部分命令提示

--- a/5-RocketMQ/5.3-RocketMQ集群监控.md
+++ b/5-RocketMQ/5.3-RocketMQ集群监控.md
@@ -127,6 +127,8 @@
 
 ## 启动dashboard
 
+记得先启动集群。
+
 - 方案一：
 
 	进入 dashboard 的 target 目录，运行其中的 .jar 包。
@@ -152,7 +154,7 @@
 	通过 docker 命令启动：
 
 	```
-	docker run -d --name rocketmq-dashboard   -e "JAVA_OPTS=-Drocketmq.namesrv.addr=192.168.213.132:9876"   -p 8080:8080   apacherocketmq/rocketmq-dashboard:latest
+	docker run -d --name rocketmq-dashboard   -e "JAVA_OPTS=-Drocketmq.namesrv.addr=192.168.213.132:9876;192.168.213.133:9876;192.168.213.134:9876"   -p 8080:8080   apacherocketmq/rocketmq-dashboard:latest
 	```
 
 	验证：
