--- a/5-RocketMQ/5.4-RocketMQ部署模式.md
+++ b/5-RocketMQ/5.4-RocketMQ部署模式.md
@@ -6,6 +6,8 @@
 
 &emsp;&emsp;[测试消息收发](#测试消息收发)
 
+[其他模式](#其他模式)
+
 ---
 
 # Local模式
@@ -59,7 +61,7 @@
 	./tools.sh org.apache.rocketmq.example.quickstart.Consumer
 	```
 
-# 其他
+# 其他模式
 
-[https://rocketmq.apache.org/zh/docs/deploymentOperations/01deploy](https://rocketmq.apache.org/zh/docs/deploymentOperations/01deploy)
+详见官方文档[https://rocketmq.apache.org/zh/docs/deploymentOperations/01deploy](https://rocketmq.apache.org/zh/docs/deploymentOperations/01deploy)
 
