[2] 更新了 Docker 启动方式

--- a/2-Redis/2.1-Redis基础.md
+++ b/2-Redis/2.1-Redis基础.md
@@ -48,6 +48,17 @@ Redis是一种使用ANSI C语言编写、遵守BSD协议、支持网络、基于
 
 执行 ```yum install redis``` 即可。
 
+- 需要特点版本操作如下（以6.2.7为例）：
+	```
+		wget https://download.redis.io/releases/redis-6.2.7.tar.gz
+		tar -zxvf redis-6.2.7.tar.gz
+		cd redis-6.2.7
+		make
+		make install
+	```
+
+- 配置文件通常在 /etc/redis.conf
+
 # 基本命令
 
 - 启动 Redis ：
@@ -69,6 +80,8 @@ Redis是一种使用ANSI C语言编写、遵守BSD协议、支持网络、基于
 	```
 
 	![连接Redis服务端.png](../res/Redis/连接Redis服务端.png)
+
+- 如在docker中启动请参考[https://github.com/qinlw/myBlog/blob/main/3-Docker/3.6-Docker%E4%BD%BF%E7%94%A8%E5%8F%82%E8%80%83.md](https://github.com/qinlw/myBlog/blob/main/3-Docker/3.6-Docker%E4%BD%BF%E7%94%A8%E5%8F%82%E8%80%83.md)
 
 - 设置一个key为a，值为10的数据
 
